RESOLVED FIXED33498
REGRESSION: svg/css/circle-in-mask-with-shadow.svg failing pixel tests
https://bugs.webkit.org/show_bug.cgi?id=33498
Summary REGRESSION: svg/css/circle-in-mask-with-shadow.svg failing pixel tests
Beth Dakin
Reported 2010-01-11 16:02:58 PST
The shadow is getting clipped away. This is probably <mask> related.
Attachments
Patch (47.21 KB, patch)
2010-01-14 16:33 PST, Beth Dakin
sam: review+
proposed fix for Qt port (27.48 KB, patch)
2010-01-14 22:46 PST, Csaba Osztrogonác
no flags
Beth Dakin
Comment 1 2010-01-14 16:33:22 PST
WebKit Review Bot
Comment 2 2010-01-14 16:39:14 PST
Attachment 46620 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/rendering/style/SVGRenderStyle.h:37: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1
Beth Dakin
Comment 3 2010-01-14 16:42:05 PST
(In reply to comment #2) > Attachment 46620 [details] did not pass style-queue: > > Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 > WebCore/rendering/style/SVGRenderStyle.h:37: Code inside a namespace should > not be indented. [whitespace/indent] [4] > Total errors found: 1 I do not intend to fix this style problem with this patch since it would involve re-tabbing the entire header file, and it would make the actual changes to the file for the sake of fixing this bug difficult to see. However, I would be happy to re-tabulate the file in a separate patch after the fact if it makes a difference to reviewers.
Sam Weinig
Comment 4 2010-01-14 17:08:44 PST
Comment on attachment 46620 [details] Patch Please add the FIXME we discussed to SVGRenderStyle.h
Beth Dakin
Comment 5 2010-01-14 17:13:55 PST
Fixed with r53300.
Eric Seidel (no email)
Comment 6 2010-01-14 17:53:42 PST
Looks like this broke 6 tests on the Qt bot: http://build.webkit.org/results/Qt%20Linux%20Release/r53300%20(6017)/results.html I guess Qt probably has custom results for those tests?
Eric Seidel (no email)
Comment 7 2010-01-14 18:02:58 PST
Re-opening due to bot failures.
Csaba Osztrogonác
Comment 8 2010-01-14 22:46:35 PST
Created attachment 46643 [details] proposed fix for Qt port Qt port has own expected files for SVG tests, because sometimes small pixel can be occured (because of different fonts) and some other reason. eg. MACs dump SVG path with fixed point (2 decimal) number, Qt port dump it with floating point number (so many decimal as need). The latter thing is not so good, I'm going to refactor it to be same to MAC. (I prepared a patch before, but some tests should be updated with it.) Now we should update results. The differents are analogous as in http://trac.webkit.org/changeset/53300
Csaba Osztrogonác
Comment 9 2010-01-14 23:33:05 PST
Comment on attachment 46643 [details] proposed fix for Qt port rs-ed by Kenneth Rohde Christiansen, anded landed in 53322.
Note You need to log in before you can comment on or make changes to this bug.