WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=33498 REGRESSION: svg/css/circle-in-mask-with-shadow.svg failing pixel tests -and corresponding- <rdar://problem/7544176>

Reviewed by Sam Weinig.

This change makes repaintRectInLocalCoordinates return a rect that
is -webkit-svg-shadow-aware.

* rendering/RenderPath.cpp:
(WebCore::RenderPath::repaintRectInLocalCoordinates):
* rendering/RenderSVGContainer.cpp:
(WebCore::RenderSVGContainer::repaintRectInLocalCoordinates):
* rendering/RenderSVGImage.cpp:
(WebCore::RenderSVGImage::repaintRectInLocalCoordinates):
* rendering/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::repaintRectInLocalCoordinates):
* rendering/RenderSVGText.cpp:
(WebCore::RenderSVGText::repaintRectInLocalCoordinates):
* rendering/SVGRenderSupport.cpp:
(WebCore::SVGRenderBase::prepareToRenderSVGContent):
* rendering/style/SVGRenderStyle.cpp:
(WebCore::SVGRenderStyle::inflateForShadow):
* rendering/style/SVGRenderStyle.h:

LayoutTests: Tests for https://bugs.webkit.org/show_bug.cgi?id=33498 REGRESSION:
svg/css/circle-in-mask-with-shadow.svg failing pixel tests
-and corresponding-
<rdar://problem/7544176>

Reviewed by Sam Weinig.

All of these tests just needed to be updated because of small
rounding differences.

* platform/mac/fast/repaint/moving-shadow-on-container-expected.checksum:
* platform/mac/fast/repaint/moving-shadow-on-container-expected.png:
* platform/mac/fast/repaint/moving-shadow-on-container-expected.txt:
* platform/mac/fast/repaint/moving-shadow-on-path-expected.checksum:
* platform/mac/fast/repaint/moving-shadow-on-path-expected.png:
* platform/mac/fast/repaint/moving-shadow-on-path-expected.txt:
* platform/mac/svg/css/arrow-with-shadow-expected.png:
* platform/mac/svg/css/arrow-with-shadow-expected.txt:
* platform/mac/svg/css/circle-in-mask-with-shadow-expected.checksum:
* platform/mac/svg/css/circle-in-mask-with-shadow-expected.png:
* platform/mac/svg/css/circle-in-mask-with-shadow-expected.txt:
* platform/mac/svg/css/clippath-with-shadow-expected.png:
* platform/mac/svg/css/composite-shadow-example-expected.checksum:
* platform/mac/svg/css/composite-shadow-example-expected.png:
* platform/mac/svg/css/composite-shadow-example-expected.txt:
* platform/mac/svg/css/composite-shadow-with-opacity-expected.checksum:
* platform/mac/svg/css/composite-shadow-with-opacity-expected.png:
* platform/mac/svg/css/composite-shadow-with-opacity-expected.txt:
* platform/mac/svg/css/css-box-min-width-expected.checksum:
* platform/mac/svg/css/css-box-min-width-expected.png:
* platform/mac/svg/css/group-with-shadow-expected.txt:
* platform/mac/svg/css/mask-with-shadow-expected.txt:
* platform/mac/svg/css/path-with-shadow-expected.png:
* platform/mac/svg/css/path-with-shadow-expected.txt:
* platform/mac/svg/css/shadow-and-opacity-expected.txt:
* platform/mac/svg/css/shadow-with-large-radius-expected.txt:
* platform/mac/svg/css/shadow-with-negative-offset-expected.txt:
* platform/mac/svg/css/stars-with-shadow-expected.checksum:
* platform/mac/svg/css/stars-with-shadow-expected.png:
* platform/mac/svg/css/stars-with-shadow-expected.txt:
* platform/mac/svg/filters/shadow-on-rect-with-filter-expected.checksum:
* platform/mac/svg/filters/shadow-on-rect-with-filter-expected.png:
* platform/mac/svg/filters/shadow-on-rect-with-filter-expected.txt:



Canonical link: https://commits.webkit.org/44704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53300 268f45cc-cd09-0410-ab3c-d52691b4dbfc