WebCore/rendering/RenderPath.cpp
@@ -168,6 +168,8 @@ FloatRect RenderPath::repaintRectInLocalCoordinates() const
     if (!rect.isEmpty())
         m_cachedLocalRepaintRect.intersect(rect);
 
+    style()->svgStyle()->inflateForShadow(m_cachedLocalRepaintRect);
+
     return m_cachedLocalRepaintRect;
 }
 
