WebCore/rendering/RenderSVGContainer.cpp
@@ -159,6 +159,8 @@ FloatRect RenderSVGContainer::repaintRectInLocalCoordinates() const
     if (!rect.isEmpty())
         repaintRect.intersect(rect);
 
+    style()->svgStyle()->inflateForShadow(repaintRect);
+
     return repaintRect;
 }
 
