WebCore/rendering/RenderSVGText.cpp
@@ -228,6 +228,8 @@ FloatRect RenderSVGText::repaintRectInLocalCoordinates() const
     if (!rect.isEmpty())
         repaintRect.intersect(rect);
 
+    style()->svgStyle()->inflateForShadow(repaintRect);
+
     return repaintRect;
 }
 
