WebCore/rendering/SVGRenderSupport.cpp
@@ -92,20 +92,15 @@ bool SVGRenderBase::prepareToRenderSVGContent(RenderObject* object, RenderObject
     const SVGRenderStyle* svgStyle = style->svgStyle();
     ASSERT(svgStyle);
 
-    ShadowData* shadow = svgStyle->shadow();
-    IntRect repaintIntRectWithShadow = enclosingIntRect(repaintRect);
-    if (shadow)
-        svgStyle->inflateForShadow(repaintIntRectWithShadow);
-
     // Setup transparency layers before setting up filters!
     float opacity = style->opacity(); 
     if (opacity < 1.0f) {
-        paintInfo.context->clip(repaintIntRectWithShadow);
+        paintInfo.context->clip(repaintRect);
         paintInfo.context->beginTransparencyLayer(opacity);
     }
 
-    if (shadow) {
-        paintInfo.context->clip(repaintIntRectWithShadow);
+    if (ShadowData* shadow = svgStyle->shadow()) {
+        paintInfo.context->clip(repaintRect);
         paintInfo.context->setShadow(IntSize(shadow->x, shadow->y), shadow->blur, shadow->color, style->colorSpace());
         paintInfo.context->beginTransparencyLayer(1.0f);
     }
