WebCore/rendering/style/SVGRenderStyle.h
@@ -34,9 +34,10 @@
 
 namespace WebCore {
 
+    class FloatRect;
+    class IntRect;
     class RenderObject;
     class RenderStyle;
-    class IntRect;
 
     class SVGRenderStyle : public RefCounted<SVGRenderStyle> {    
     public:
@@ -47,7 +48,9 @@ namespace WebCore {
         bool inheritedNotEqual(const SVGRenderStyle*) const;
         void inheritFrom(const SVGRenderStyle*);
 
+        // FIXME: These functions should move to ShadowData.
         void inflateForShadow(IntRect&) const;
+        void inflateForShadow(FloatRect&) const;
         
         bool operator==(const SVGRenderStyle&) const;
         bool operator!=(const SVGRenderStyle& o) const { return !(*this == o); }
